[package]
name = "gc_heap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gc_headers = {git = "https://github.com/gjf2a/gc_headers"}
bare_metal_queue = {git = "https://github.com/gjf2a/bare_metal_queue"}
